--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Alex Kristoffersen</title>
+		<title>Alex Kristoffersen, The Magic Money Machine</title>
 	</head>
 <html>
