--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html>
 	<head>
 		<title>Alex Kristoffersen, The Magic Money Machine!</title>
+		<style>
+			body {
+				background-color: #080891
+			}
+		<style>
+
 	</head>
+	
 	<img src="Alex.JPG">
 <html>
