--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
 	<head>
 		<title>Alex Kristoffersen, The Magic Money Machine!</title>
 		<style>
-			body {
-				background-color: #080891
-			}
-		<img src="Alex.JPG">
+		body {background-color: #080891}
 		</style>
-
+		<img src="Alex.JPG">
 	</head>
 <html>
