--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<title>Alex Kristoffersen, The Magic Money Machine!</title>
 		<style>
-		body {background-color: #080891}
+		body {background-color: #202060
+}
 		</style>
 		<img src="Alex.JPG">
 	</head>
