--- a/index.html
+++ b/index.html
@@ -2,11 +2,33 @@
 <html>
 	<head>
 		<title>Alex Kristoffersen, The Magic Money Machine!</title>
+		<div class="container">
+  <img src="Alex.JPG"> style="width:100%;">
+
+  <div class="text-block"> 
+    <h4>Nature</h4>
+    <p>What a beautiful sunrise</p>
+  </div>
+</div>
+		.container {
+    position: relative;
+}
+
+/* Bottom right text */
+.text-block {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    background-color: black;
+    color: white;
+    padding-left: 20px;
+    padding-right: 20px;
+}
 		<style>
 			
 		body {background-color: #202060
 }
 		</style>
-		<img src="Alex.JPG">
+		<text 
 	</head>
 <html>
