--- a/index.html
+++ b/index.html
@@ -3,31 +3,29 @@
 	<head>
 		<title>Alex Kristoffersen, The Magic Money Machine!</title>
 		<div class="container">
-  <img src="Alex.JPG"> style="width:100%;">
-
-  <div class="text-block"> 
-    <h4>Nature</h4>
-    <p>What a beautiful sunrise</p>
-  </div>
-</div>
-		.container {
-    position: relative;
-}
+  			<img src="Alex.JPG"> style="width:100%;">
+			<div class="text-block"> 
+    				<h4>Alex</h4>
+    				<p>What a beautiful sunrise</p>
+  			</div>
+		</div>
+		<style>
+			.container {
+    			position: relative;
+			}
 
 /* Bottom right text */
-.text-block {
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
-    background-color: black;
-    color: white;
-    padding-left: 20px;
-    padding-right: 20px;
-}
-		<style>
-			
+			.text-block {
+    				position: absolute;
+    				bottom: 20px;
+    				right: 20px;
+    				background-color: black;
+    				color: white;
+    				padding-left: 20px;
+    				padding-right: 20px;
+			}
 		body {background-color: #202060
-}
+		}
 		</style>
 		<text 
 	</head>
