--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 /* Bottom right text */
 			.text-block {
-    				position: absolute;
+    				position: relative;
     				bottom: 20px;
     				right: 20px;
     				background-color: black;
