--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   			<img src="Alex.JPG" style="width:90%;">
 			<div class="text-block"> 
     				<h4>Alex</h4>
-    				<p>What a beautiful sunrise</p>
+    				<p>What a beautiful sunrise?</p>
   			</div>
 		</div>
 		<style>
@@ -18,7 +18,7 @@
 			.text-block {
     				position: relative;
     				bottom: 20px;
-    				right: 20px;
+    				right: 50px;
     				background-color: black;
     				color: white;
     				padding-left: 20px;
