--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			.text-block {
     				position: relative;
     				bottom: 20px;
-    				right: 50px;
+    				left: 500px;
     				background-color: black;
     				color: white;
     				padding-left: 20px;
