--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Alex Kristoffersen, The Magic Money Machine!</title>
 		<div class="container">
-  			<img src="Alex.JPG" style="width:90%;">
+  			<img src="Alex.JPG" style="width:100%;">
 			<div class="text-block"> 
     				<h4>Alex</h4>
     				<p>What a beautiful sunrise?</p>
@@ -18,7 +18,7 @@
 			.text-block {
     				position: relative;
     				bottom: 20px;
-    				left: 500px;
+    				right: 20px;
     				background-color: black;
     				color: white;
     				padding-left: 20px;
