--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 /* Bottom right text */
 			.text-block {
-    				position: relative;
+    				position: absolute;
     				bottom: 20px;
-    				right: 20px;
+    				right: 200px;
     				background-color: black;
     				color: white;
     				padding-left: 20px;
