--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Alex Kristoffersen, The Magic Money Machine!</title>
+		<title>Alex Kristoffersen, Sticks and Stones May Build my House, but Words are on the Doormat</title>
 		<div class="container">
   			<img src="Alex.JPG" style="width:100%;">
 			<div class="text-block"> 
