--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
 		<title>Alex Kristoffersen, Sticks and Stones May Build my House, but Words are on the Doormat</title>
 		<div class="container">
   			<img src="Alex.JPG" style="width:100%;">
-			<div class="text-block"> 
+			<div class="text-block1"> 
     				<h4>Alex</h4>
     				<p>What a beautiful sunrise?</p>
   			</div>
+			<div class="text-block2">
+				<h4>Links</h4>
+				<a href="https://www.twitter.com/Alexanator28">Twittert</a>
+			</div>
 		</div>
 		<style>
 			.container {
@@ -15,11 +19,20 @@
 			}
 
 /* Bottom right text */
-			.text-block {
+			.text-block1 {
     				position: absolute;
     				bottom: 40px;
     				right: 369px;
     				background-color: black;
+    				color: white;
+    				padding-left: 20px;
+    				padding-right: 20px;
+			}
+			.text-block2 {
+				position: absolute;
+				bottom: 250px;
+				left: 200;
+				background-color: black;
     				color: white;
     				padding-left: 20px;
     				padding-right: 20px;
