--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   			</div>
 			<div class="text-block2">
 				<h4>Links</h4>
-				<a href="https://www.twitter.com/Alexanator28">Twittert</a>
+				<a href="https://www.twitter.com/Alexanator28">Twitter</a>
 			</div>
 		</div>
 		<style>
@@ -31,7 +31,7 @@
 			.text-block2 {
 				position: absolute;
 				bottom: 250px;
-				left: 200;
+				left: 200px;
 				background-color: black;
     				color: white;
     				padding-left: 20px;
