--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     				color: white;
     				padding-left: 20px;
     				padding-right: 20px;
+				padding-bottom: 20px;
 			}
 		body {background-color: #202060
 		}
