--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 				<h4>Links</h4>
 				<a href="https://www.twitter.com/Alexanator28">Twitter</a>
 			</div>
+			<div class="text-block3">
+				<h4>Links</h4>
+				<a href="https://github.com/alexanator28">Github</a>
+			</div>
 		</div>
 		<style>
 			.container {
@@ -32,6 +36,16 @@
 				position: absolute;
 				bottom: 250px;
 				left: 200px;
+				background-color: black;
+    				color: white;
+    				padding-left: 20px;
+    				padding-right: 20px;
+				padding-bottom: 20px;
+			}
+			.text-block3 {
+				position: absolute;
+				bottom: 500px;
+				right: 200px;
 				background-color: black;
     				color: white;
     				padding-left: 20px;
