--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 				<h4>Links</h4>
 				<a href="https://github.com/alexanator28">Github</a>
 			</div>
+			<div class="text-block4">
+				<h4>Pipe Organ Project</h4>
+				<a href="https://alexkristoffersenprojects.wordpress.com/organ-gallery/">IDEO CLICK!</a>
+			</div>
 		</div>
 		<style>
 			.container {
@@ -46,6 +50,16 @@
 				position: absolute;
 				bottom: 500px;
 				right: 200px;
+				background-color: black;
+    				color: white;
+    				padding-left: 20px;
+    				padding-right: 20px;
+				padding-bottom: 20px;
+			}
+			.text-block3 {
+				position: absolute;
+				bottom: 1000px;
+				right: 300px;
 				background-color: black;
     				color: white;
     				padding-left: 20px;
