--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Alex Kristoffersen, Sticks and Stones May Build my House, but Words are on the Doormat</title>
+		<title>Alex Kristoffersen, Maker of Things.</title>
 		<div class="container">
   			<img src="Alex.JPG" style="width:100%;">
 			<div class="text-block1"> 
@@ -69,6 +69,5 @@
 		body {background-color: #202060
 		}
 		</style>
-		<text 
 	</head>
 <html>
