--- a/index.html
+++ b/index.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Alex Kristoffersen, Maker of Things.</title>
+		<title>Alexander Kristoffersen: Personal Website</title>
+		<meta name="description" content="Beekeeping, Woodworking, and Software/Electrical Engineering Hub"/>
+		<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap" rel="stylesheet">
 		<div class="container">
-  			<img src="Alex.JPG" style="width:100%;">
 			<div class="text-block1"> 
-    				<h4>Alex</h4>
-    				<p>What a beautiful sunrise?</p>
+    				<h1>Alexander Kristoffersen</h1>
+    				<p>The internet footprint of everything me: online and off.</p>
+					<p>This is a minimalist website (Industry-speak for a Work-In-Progress), so more is to come!</p>
   			</div>
 			<div class="text-block2">
-				<h4>Links</h4>
-				<a href="https://www.twitter.com/Alexanator28">Twitter</a>
-			</div>
-			<div class="text-block3">
-				<h4>Links</h4>
-				<a href="https://github.com/alexanator28">Github</a>
-			</div>
-			<div class="text-block4">
-				<h4>Pipe Organ Project</h4>
-				<a href="https://alexkristoffersenprojects.wordpress.com/organ-gallery/">IDEO CLICK!</a>
+				<h3>Links</h3>
+				<p><a href="https://www.twitter.com/Alexanator28">Twitter</a></p>
+				<p><a href="https://github.com/alexanator28">Github</a></p>
+				<p><a href="https://alexkristoffersenprojects.wordpress.com/">Blog</a></p>
 			</div>
 		</div>
+		<img src="Alex.JPG" width="30%">
 		<style>
+			body {
+				background-color: #fffdf5;
+				font-family: 'Source Code Pro', monospace;
+
+			}
 			.container {
     			position: relative;
 			}
 
-/* Bottom right text */
+/* Bottom right text
 			.text-block1 {
     				position: absolute;
     				bottom: 40px;
@@ -66,8 +68,8 @@
     				padding-right: 20px;
 				padding-bottom: 20px;
 			}
-		body {background-color: #202060
-		}
+
+*/
 		</style>
 	</head>
 <html>
