google verification attempt.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<title>Alexander Kristoffersen: Personal Website</title>
-		<meta name="description" content="Beekeeping, Woodworking, and Software/Electrical Engineering Hub"/>
+
+		<meta name="google-site-verification" content="UwHi-Z0RTxhApXUbiul9WRtKVPE5Zi6FWh9Uz9bTBTA" />
 		<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap" rel="stylesheet">
 		<div class="container">
 			<div class="text-block1"> 
@@ -68,6 +69,7 @@
     				padding-right: 20px;
 				padding-bottom: 20px;
 			}
+			<meta name="description" content="Beekeeping, Woodworking, and Software/Electrical Engineering Hub"/>
 
 */
 		</style>
