added LinkedIn link, changed order.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 			<div class="text-block2">
 				<h3>Links</h3>
 				<p><a href="https://www.twitter.com/Alexanator28">Twitter</a></p>
+				<p><a href="https://www.linkedin.com/in/-akristoffersen/">LinkedIn</a></p>
 				<p><a href="https://github.com/alexanator28">Github</a></p>
 				<p><a href="https://alexkristoffersenprojects.wordpress.com/">Blog</a></p>
+
 			</div>
 		</div>
 		<img src="Alex.JPG" width="30%">
