--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 				<p><a href="https://www.linkedin.com/in/-akristoffersen/">LinkedIn</a></p>
 				<p><a href="https://github.com/alexanator28">Github</a></p>
 				<p><a href="https://alexkristoffersenprojects.wordpress.com/">Blog</a></p>
+				<p><a href="https://akristoffersen.com/test">Test</a></p>
 
 			</div>
 		</div>
