--- a/test.html
+++ b/test.html
@@ -3,7 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>test</title>
-    <img src="Alex.JPG" width="30%">
+    <img src="Alex.JPG" width="50%">
+    <style>
+        body {
+				background-color: #fffdf5;
+				font-family: 'Source Code Pro', monospace;
+
+			}
+			.container {
+    			position: relative;
+			}
+    </style>
 </head>
 <body>
 
