added resume link

--- a/resume.html
+++ b/resume.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>test</title>
-    <img src="Alex.JPG" width="50%">
+    <title>Resume</title>
     <style>
         body {
 				background-color: #fffdf5;
@@ -16,6 +15,8 @@
     </style>
 </head>
 <body>
+    <iframe src="Resume.pdf" width="100%" height="1000px">
 
+    </iframe>
 </body>
 </html>
