updated personal image.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 			</div>
 		</div>
-		<img src="Alex.JPG" width="30%">
+		<img src="alex_current.JPG" width="30%">
 		<style>
 			body {
 				background-color: #fffdf5;
