updated bio and resume.

--- a/index.html
+++ b/index.html
@@ -9,14 +9,20 @@
 		<div class="container">
 			<div class="text-block1"> 
     				<h1>Alexander Kristoffersen</h1>
-    				<p>The internet footprint of everything me: online and off.</p>
-					<p>This is a minimalist website (Industry-speak for a Work-In-Progress), so more is to come!</p>
+                    <p>The internet footprint of everything me: online and off.</p>
+                    <p>I am a EECS major at UC Berkeley. Here are a couple of projects that I am proud to be a part of: </p>
+                    <ul>
+                        <li><a href="https://stac.berkeley.edu/">Space Technologies at Cal (STAC)</a></li>
+                        <li><a href="https://devpost.com/software/stegasaurus">Stegasaurus - Private Messaging Tool</a></li>
+                        <li> And more to come!</li>
+                      </ul>
+					<p>I like computer vision, beekeeping, woodworking, slide rules, krautrock, funk music, satellites, signal processing, oranges, robotics, and picking up new interests. I'm not so great at web design.</p>
   			</div>
 			<div class="text-block2">
 				<h3>Links</h3>
 				<p><a href="https://www.twitter.com/Alexanator28">Twitter</a></p>
 				<p><a href="https://www.linkedin.com/in/-akristoffersen/">LinkedIn</a></p>
-				<p><a href="https://github.com/alexanator28">Github</a></p>
+				<p><a href="https://github.com/akristoffersen">Github</a></p>
 				<p><a href="https://alexkristoffersenprojects.wordpress.com/">Blog</a></p>
 				<p><a href="https://akristoffersen.com/resume">Resume</a></p>
 
