--- a/party.html
+++ b/party.html
@@ -1,1 +1,3 @@
+<!DOCTYPE html>
+<html lang="en"></html>
 <meta http-equiv="Refresh" content="0; url=https://gather.town/app/OWmxpLjuBFULvbRF/halloween" />
