--- a/party.html
+++ b/party.html
@@ -1,3 +1,14 @@
 <!DOCTYPE html>
-<html lang="en"></html>
-<meta http-equiv="Refresh" content="0; url=https://gather.town/app/OWmxpLjuBFULvbRF/halloween" />
+<html>
+	<head>
+		<title>Alexander Kristoffersen: Personal Website</title>
+
+		<meta name="google-site-verification" content="UwHi-Z0RTxhApXUbiul9WRtKVPE5Zi6FWh9Uz9bTBTA" />
+		<meta name="description" content="Beekeeping, Woodworking, and Software/Electrical Engineering Hub"/>
+		<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap" rel="stylesheet">
+		<div class="container">
+			<div class="text-block1"> 
+    				<h1>Party Over, thanks for coming! </h1>
+		</style>
+	</head>
+<html>
