quick updates and zoom room.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                     <ul>
                         <li><a href="https://stac.berkeley.edu/">Space Technologies at Cal (STAC)</a></li>
                         <li><a href="https://devpost.com/software/stegasaurus">Stegasaurus - Private Messaging Tool</a></li>
+                        <li><a href="https://rise.cs.berkeley.edu/s">RISELab - Undergraduate Researcher</a></li>
                         <li> And more to come!</li>
                       </ul>
 					<p>I like computer vision, beekeeping, woodworking, slide rules, krautrock, funk music, satellites, signal processing, oranges, robotics, and picking up new interests. I'm not so great at web design.</p>
