--- a/zoom.html
+++ b/zoom.html
@@ -1,3 +1,7 @@
 <!DOCTYPE html>                                                                                                                         
-<html lang="en">                                                                                                                        
-</html> <meta http-equiv="Refresh" content="0; url=https://berkeley.zoom.us/j/6033783215" />
+<html lang="en">
+<html>
+  <head>
+    <meta http-equiv="Refresh" content="0; url=https://berkeley.zoom.us/j/6033783215" /> 
+  </head>
+<html>
