removed resume.html.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<p><a href="https://www.linkedin.com/in/-akristoffersen/">LinkedIn</a></p>
 				<p><a href="https://github.com/akristoffersen">Github</a></p>
 				<p><a href="https://alexkristoffersenprojects.wordpress.com/">Blog</a></p>
-				<p><a href="https://akristoffersen.com/resume">Resume</a></p>
+				<p><a href="https://akristoffersen.com/Resume.pdf">Resume</a></p>
 
 			</div>
 		</div>
