--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 			<div class="text-block1"> 
     				<h1>Alexander Kristoffersen</h1>
                     <p>The internet footprint of everything me: online and off.</p>
-                    <p>I am a EECS major at UC Berkeley. Here are a couple of projects that I am proud to be a part of: </p>
+                    <p>I graduated with a BS in EECS at UC Berkeley in 2022. I will be returning for my Masters in EECS, specializing in computer vision and graphics. </p>
+					<p>Here are a couple of projects that I am proud to be a part of:</p>
                     <ul>
                         <li><a href="https://stac.berkeley.edu/">Space Technologies at Cal (STAC)</a></li>
                         <li><a href="https://devpost.com/software/stegasaurus">Stegasaurus - Private Messaging Tool</a></li>
