update resume and index.

--- a/index.html
+++ b/index.html
@@ -1,47 +1,53 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Alexander Kristoffersen: Personal Website</title>
 
-		<meta name="google-site-verification" content="UwHi-Z0RTxhApXUbiul9WRtKVPE5Zi6FWh9Uz9bTBTA" />
-		<meta name="description" content="Beekeeping, Woodworking, and Software/Electrical Engineering Hub"/>
-		<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap" rel="stylesheet">
-		<div class="container">
-			<div class="text-block1"> 
-    				<h1>Alexander Kristoffersen</h1>
-                    <p>The internet footprint of everything me: online and off.</p>
-                    <p>I graduated with a BS in EECS at UC Berkeley in 2022. I will be returning for my Masters in EECS, specializing in computer vision and graphics. </p>
-					<p>Here are a couple of projects that I am proud to be a part of:</p>
-                    <ul>
-                        <li><a href="https://stac.berkeley.edu/">Space Technologies at Cal (STAC)</a></li>
-                        <li><a href="https://devpost.com/software/stegasaurus">Stegasaurus - Private Messaging Tool</a></li>
-                        <li><a href="https://rise.cs.berkeley.edu/">RISELab - Undergraduate Researcher</a></li>
-                        <li> And more to come!</li>
-                      </ul>
-					<p>I like computer vision, beekeeping, woodworking, slide rules, krautrock, funk music, satellites, signal processing, oranges, robotics, and picking up new interests. I'm not so great at web design.</p>
-  			</div>
-			<div class="text-block2">
-				<h3>Links</h3>
-				<p><a href="https://www.twitter.com/Alexanator28">Twitter</a></p>
-				<p><a href="https://www.linkedin.com/in/-akristoffersen/">LinkedIn</a></p>
-				<p><a href="https://github.com/akristoffersen">Github</a></p>
-				<p><a href="https://alexkristoffersenprojects.wordpress.com/">Blog</a></p>
-				<p><a href="https://www.akristoffersen.com/Resume.pdf">Resume</a></p>
+<head>
+	<title>Alexander Kristoffersen: Personal Website</title>
 
-			</div>
+	<meta name="google-site-verification" content="UwHi-Z0RTxhApXUbiul9WRtKVPE5Zi6FWh9Uz9bTBTA" />
+	<meta name="description" content="Beekeeping, Woodworking, and Software/Electrical Engineering Hub" />
+	<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap" rel="stylesheet">
+	<div class="container">
+		<div class="text-block1">
+			<h1>Alexander Kristoffersen</h1>
+			<p>The internet footprint of everything me: online and off.</p>
+			<p>I graduated with a BS in EECS at UC Berkeley in 2022. I returned for my Masters in EECS,
+				specializing in computer vision and graphics. </p>
+			<p>Here are a couple of projects that I am proud to be a part of:</p>
+			<ul>
+				<li><a href="https://github.com/nerfstudio-project/nerfstudio">Nerfstudio - A collaboration friendly
+						studio for NeRFs</a></li>
+				<li><a href="https://stac.berkeley.edu/">Space Technologies at Cal (STAC)</a></li>
+				<li><a href="https://devpost.com/software/stegasaurus">Stegasaurus - Private Messaging Tool</a></li>
+				<li><a href="https://rise.cs.berkeley.edu/">RISELab - Undergraduate Researcher</a></li>
+				<li> And more to come!</li>
+			</ul>
+			<p>I like computer vision, beekeeping, woodworking, slide rules, krautrock, funk music, satellites, signal
+				processing, oranges, robotics, and picking up new interests. I'm not so great at web design.</p>
 		</div>
-		<img src="alex_current.JPG" width="30%">
-		<style>
-			body {
-				background-color: #fffdf5;
-				font-family: 'Source Code Pro', monospace;
+		<div class="text-block2">
+			<h3>Links</h3>
+			<p><a href="https://www.twitter.com/Alexanator28">Twitter</a></p>
+			<p><a href="https://www.linkedin.com/in/-akristoffersen/">LinkedIn</a></p>
+			<p><a href="https://github.com/akristoffersen">Github</a></p>
+			<p><a href="https://alexkristoffersenprojects.wordpress.com/">Blog</a></p>
+			<p><a href="https://www.akristoffersen.com/Resume.pdf">Resume</a></p>
 
-			}
-			.container {
-    			position: relative;
-			}
+		</div>
+	</div>
+	<img src="alex_current.JPG" width="30%">
+	<style>
+		body {
+			background-color: #fffdf5;
+			font-family: 'Source Code Pro', monospace;
 
-/* Bottom right text
+		}
+
+		.container {
+			position: relative;
+		}
+
+		/* Bottom right text
 			.text-block1 {
     				position: absolute;
     				bottom: 40px;
@@ -83,6 +89,6 @@
 			}
 
 */
-		</style>
-	</head>
+	</style>
+</head>
 <html>
