--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
 			<h1>Alexander Kristoffersen</h1>
 			<p>The internet footprint of everything me: online and off.</p>
 			<p>I graduated with a BS in EECS at UC Berkeley in 2022. I returned for my Masters in EECS,
-				specializing in computer vision and graphics. </p>
+				specializing in computer vision and graphics. I will be joining the Autonomy team at <a
+					href="https://www.skydio.com/">Skydio</a> as an computer vision engineer in Summer 2023.</p>
 			<p>Here are a couple of projects that I am proud to be a part of:</p>
 			<ul>
 				<li><a href="https://github.com/nerfstudio-project/nerfstudio">Nerfstudio - A collaboration friendly
 						studio for NeRFs</a></li>
+				<li><a href="https://www2.eecs.berkeley.edu/Pubs/TechRpts/2023/EECS-2023-118.html">LoopNeRF - Temporal
+						Compression for Generating 3D Video Textures</a></li>
 				<li><a href="https://stac.berkeley.edu/">Space Technologies at Cal (STAC)</a></li>
 				<li><a href="https://devpost.com/software/stegasaurus">Stegasaurus - Private Messaging Tool</a></li>
 				<li><a href="https://rise.cs.berkeley.edu/">RISELab - Undergraduate Researcher</a></li>
@@ -27,7 +30,7 @@
 		</div>
 		<div class="text-block2">
 			<h3>Links</h3>
-			<p><a href="https://www.twitter.com/Alexanator28">Twitter</a></p>
+			<p><a href="https://twitter.com/akristoffersen0">Twitter</a></p>
 			<p><a href="https://www.linkedin.com/in/-akristoffersen/">LinkedIn</a></p>
 			<p><a href="https://github.com/akristoffersen">Github</a></p>
 			<p><a href="https://alexkristoffersenprojects.wordpress.com/">Blog</a></p>
