--- a/index.html
+++ b/index.html
@@ -11,22 +11,24 @@
 		<div class="text-block1">
 			<h1>Alexander Kristoffersen</h1>
 			<p>The internet footprint of everything me: online and off.</p>
-			<p>I graduated with a BS in EECS at UC Berkeley in 2022. I returned for my Masters in EECS,
-				specializing in computer vision and graphics. I will be joining the Autonomy team at <a
-					href="https://www.skydio.com/">Skydio</a> as an computer vision engineer in Summer 2023.</p>
+			<p>I graduated with a BS in EECS at UC Berkeley, and completed a Masters in EECS in 2023,
+				specializing in computer vision and graphics.</p>
+			<p> I recently joined <a href="https://www.skydio.com/">Skydio</a> as an computer vision engineer, primarily
+				working within photogrammetry.</p>
 			<p>Here are a couple of projects that I am proud to be a part of:</p>
 			<ul>
 				<li><a href="https://github.com/nerfstudio-project/nerfstudio">Nerfstudio - A collaboration friendly
-						studio for NeRFs</a></li>
+						studio for NeRFs</a> (<a href="https://arxiv.org/abs/2302.04264">Paper</a>)</li>
 				<li><a href="https://www2.eecs.berkeley.edu/Pubs/TechRpts/2023/EECS-2023-118.html">LoopNeRF - Temporal
-						Compression for Generating 3D Video Textures</a></li>
+						Compression for Generating 3D Video Textures</a> (Master's Final Project) </li>
 				<li><a href="https://stac.berkeley.edu/">Space Technologies at Cal (STAC)</a></li>
 				<li><a href="https://devpost.com/software/stegasaurus">Stegasaurus - Private Messaging Tool</a></li>
 				<li><a href="https://rise.cs.berkeley.edu/">RISELab - Undergraduate Researcher</a></li>
 				<li> And more to come!</li>
 			</ul>
 			<p>I like computer vision, beekeeping, woodworking, slide rules, krautrock, funk music, satellites, signal
-				processing, oranges, robotics, and picking up new interests. I'm not so great at web design.</p>
+				processing, oranges, robotics, traveling, and picking up new interests. I'm not so great at web design.
+			</p>
 		</div>
 		<div class="text-block2">
 			<h3>Links</h3>
@@ -38,7 +40,11 @@
 
 		</div>
 	</div>
-	<img src="alex_current.JPG" width="30%">
+
+	<figure>
+		<img src="alex_current.JPG" width="30%">
+		<figcaption> Me, circa 2019.</figcaption>
+	</figure>
 	<style>
 		body {
 			background-color: #fffdf5;
@@ -48,6 +54,12 @@
 
 		.container {
 			position: relative;
+		}
+
+		figure,
+		img {
+			margin: 0;
+			padding: 0;
 		}
 
 		/* Bottom right text
