--- a/resume.html
+++ b/resume.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Resume</title>
     <style>
         body {
-				background-color: #fffdf5;
-				font-family: 'Source Code Pro', monospace;
+            background-color: #fffdf5;
+            font-family: 'Source Code Pro', monospace;
 
-			}
-			.container {
-    			position: relative;
-			}
+        }
+
+        .container {
+            position: relative;
+        }
     </style>
 </head>
+
 <body>
-    <iframe src="Resume.pdf" width="100%" height="1000px">
+    <iframe src="Resume_Alexander_Kristoffersen_FT_24.pdf" width="100%" height="1000px">
 
     </iframe>
 </body>
+
 </html>
