--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<p><a href="https://www.linkedin.com/in/-akristoffersen/">LinkedIn</a></p>
 			<p><a href="https://github.com/akristoffersen">Github</a></p>
 			<p><a href="https://alexkristoffersenprojects.wordpress.com/">Blog</a></p>
-			<p><a href="https://www.akristoffersen.com/Resume.pdf">Resume</a></p>
+			<p><a href="https://www.akristoffersen.com/Resume_Alexander_Kristoffersen_FT_24.pdf">Resume</a></p>
 
 		</div>
 	</div>
