--- a/index.html
+++ b/index.html
@@ -105,5 +105,10 @@
 
 */
 	</style>
+	<script>
+		if (window.location.pathname === '/Resume.pdf') {
+			window.location.replace('/Resume_Alexander_Kristoffersen_FT_24.pdf');
+		}
+	</script>
 </head>
 <html>
