--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 
 <head>
 	<title>Alexander Kristoffersen: Personal Website</title>
-
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="google-site-verification" content="UwHi-Z0RTxhApXUbiul9WRtKVPE5Zi6FWh9Uz9bTBTA" />
-	<meta name="description" content="Beekeeping, Woodworking, and Software/Electrical Engineering Hub" />
+	<meta name="description" content="Beekeeping, Woodworking, and Engineering of Alex Kristoffersen" />
 	<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap" rel="stylesheet">
 	<div class="container">
 		<div class="text-block1">
 			<h1>Alexander Kristoffersen</h1>
-			<p>The internet footprint of everything me: online and off.</p>
-			<p>I graduated with a BS in EECS at UC Berkeley, and completed a Masters in EECS in 2023,
+			<p>I graduated with a BS in EECS at UC Berkeley in 2022, and completed a Masters in EECS in 2023
 				specializing in computer vision and graphics.</p>
-			<p> I recently joined <a href="https://www.skydio.com/">Skydio</a> as an computer vision engineer, primarily
-				working within photogrammetry.</p>
+			<p> I recently joined the Autonomy Team at <a href="https://www.skydio.com/">Skydio</a> as a computer vision
+				engineer, primarily
+				working within photogrammetry and 3D vision.</p>
 			<p>Here are a couple of projects that I am proud to be a part of:</p>
 			<ul>
 				<li><a href="https://github.com/nerfstudio-project/nerfstudio">Nerfstudio - A collaboration friendly
@@ -29,6 +29,13 @@
 			<p>I like computer vision, beekeeping, woodworking, slide rules, krautrock, funk music, satellites, signal
 				processing, oranges, robotics, traveling, and picking up new interests. I'm not so great at web design.
 			</p>
+			<p>
+				I have recently become interested in the intersection of machine learning and social choice, and
+				presented a <a href="https://arxiv.org/abs/2401.16412">paper</a> (co-authors Wesley Holliday and Eric
+				Pacuit) at <a href="https:
+						//sites.google.com/view/scala24/">SCaLa-24 Workshop</a> at <a href="https://www.aamas2023.org/">AAMAS 2024</a>
+				on the topic.
+			</p>
 		</div>
 		<div class="text-block2">
 			<h3>Links</h3>
@@ -41,6 +48,10 @@
 
 		</div>
 	</div>
+	<figure>
+		<img src="1_distill_hr_1.gif" width="30%">
+		<figcaption> LoopNeRF Result, Berkeley Stream</figcaption>
+	</figure>
 
 	<figure>
 		<img src="alex_current.JPG" width="30%">
