--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		</div>
 	</div>
 	<figure>
-		<img src="1_distill_hr_1.gif" width="30%">
+		<img src="1_distill_hr_1_compressed.gif" width="30%">
 		<figcaption> LoopNeRF Result, Berkeley Stream</figcaption>
 	</figure>
 
