fixed aamas link

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 				I have recently become interested in the intersection of machine learning and social choice, and
 				presented a <a href="https://arxiv.org/abs/2401.16412">paper</a> (co-authors Wesley Holliday and Eric
 				Pacuit) at <a href="https:
-						//sites.google.com/view/scala24/">SCaLa-24 Workshop</a> at <a href="https://www.aamas2023.org/">AAMAS 2024</a>
+						//sites.google.com/view/scala24/">SCaLa-24 Workshop</a> at <a
+					href="https://www.aamas2024-conference.auckland.ac.nz/">AAMAS 2024</a>
 				on the topic.
 			</p>
 		</div>
