new resume, some updates

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 	<script>
 		if (window.location.pathname === '/Resume.pdf') {
-			window.location.replace('/Resume_Alexander_Kristoffersen_FT_24.pdf');
+			window.location.replace('/Resume_Alexander_Kristoffersen_2025.pdf');
 		}
 	</script>
 </head>
@@ -61,8 +61,8 @@
 
 			<p>I graduated with a BS in EECS at UC Berkeley in 2022, and completed a Masters in EECS in 2023
 				specializing in computer vision and graphics.</p>
-			<p> I recently joined the Autonomy Team at <a href="https://www.skydio.com/">Skydio</a> as a computer vision
-				engineer, primarily
+			<p> I am currently an Autonomy Engineer, Computer Vision at <a href="https://www.skydio.com/">Skydio</a>
+				primarily
 				working within photogrammetry and 3D vision.</p>
 			<p>Here are a couple of projects that I am proud to be a part of:</p>
 			<ul>
@@ -73,10 +73,14 @@
 				<li><a href="https://stac.berkeley.edu/">Space Technologies at Cal (STAC)</a></li>
 				<li><a href="https://devpost.com/software/stegasaurus">Stegasaurus - Private Messaging Tool</a></li>
 				<li><a href="https://rise.cs.berkeley.edu/">RISELab - Undergraduate Researcher</a></li>
+				<li><a href="https://www.skydio.com/blog/skydio-x10-revolutionizing-3d-scanning-with-onboard-modeling">Skydio
+						Onboard Modeling</a> (On-device photogrammetry product I helped ship in 2023)</li>
 				<li> And more to come!</li>
 			</ul>
-			<p>I like computer vision, beekeeping, woodworking, slide rules, krautrock, funk music, satellites, signal
-				processing, oranges, robotics, traveling, and picking up new interests. I'm not so great at web design.
+			<p>I like computer vision, graphics, beekeeping, woodworking, slide rules, krautrock, funk music,
+				satellites, signal
+				processing, oranges, robotics, traveling, generative modeling, and picking up new interests. I'm not so
+				great at web design.
 			</p>
 			<p>
 				I have recently become interested in the intersection of machine learning and social choice, and
@@ -92,9 +96,9 @@
 			<p><a href="https://twitter.com/akristoffersen0">Twitter</a></p>
 			<p><a href="https://www.linkedin.com/in/-akristoffersen/">LinkedIn</a></p>
 			<p><a href="https://github.com/akristoffersen">Github</a></p>
-			<p><a href="https://alexkristoffersenprojects.wordpress.com/">Blog</a></p>
+			<p><a href="https://alexkristoffersenprojects.wordpress.com/">Blog (old)</a></p>
 			<p><a href="https://scholar.google.com/citations?user=u8p5Y1EAAAAJ&hl=en">Google Scholar</a></p>
-			<p><a href="https://www.akristoffersen.com/Resume_Alexander_Kristoffersen_FT_24.pdf">Resume</a></p>
+			<p><a href="https://www.akristoffersen.com/Resume_Alexander_Kristoffersen_2025.pdf">Resume</a></p>
 		</div>
 	</div>
 
