--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
 			<ul>
 				<li><a href="https://github.com/nerfstudio-project/nerfstudio">Nerfstudio - A collaboration-friendly
 						studio for NeRFs</a> (<a href="https://arxiv.org/abs/2302.04264">Paper</a>)</li>
+				<li><a href="https://www.skydio.com/blog/skydio-x10-revolutionizing-3d-scanning-with-onboard-modeling">Skydio
+						Onboard Modeling</a> (On-device photogrammetry product I helped ship in late 2023)</li>
 				<li><a href="https://www2.eecs.berkeley.edu/Pubs/TechRpts/2023/EECS-2023-118.html">LoopNeRF - Temporal
 						Compression for Generating 3D Video Textures</a> (Master's Final Project) </li>
 				<li><a href="https://stac.berkeley.edu/">Space Technologies at Cal (STAC)</a></li>
 				<li><a href="https://devpost.com/software/stegasaurus">Stegasaurus - Private Messaging Tool</a></li>
 				<li><a href="https://rise.cs.berkeley.edu/">RISELab - Undergraduate Researcher</a></li>
-				<li><a href="https://www.skydio.com/blog/skydio-x10-revolutionizing-3d-scanning-with-onboard-modeling">Skydio
-						Onboard Modeling</a> (On-device photogrammetry product I helped ship in 2023)</li>
 				<li> And more to come!</li>
 			</ul>
 			<p>I like computer vision, graphics, beekeeping, woodworking, slide rules, krautrock, funk music,
