--- a/index.html
+++ b/index.html
@@ -59,11 +59,16 @@
 				<figcaption> Me, circa 2024.</figcaption>
 			</figure>
 
+			<p>Hi! My name is Alex, I'm an engineer living in SF interested in exciting applications of CV and ML.
+			</p>
+			<p> I recently started at <a href="https://www.midjourney.com/">Midjourney</a>, where I am writing software
+				within their hardware team.</p>
+
+			<p> From 2023-2025, I was an Autonomy Engineer, Computer Vision at <a
+					href="https://www.skydio.com/">Skydio</a>
+				primarily working within photogrammetry and 3D vision.</p>
 			<p>I graduated with a BS in EECS at UC Berkeley in 2022, and completed a Masters in EECS in 2023
 				specializing in computer vision and graphics.</p>
-			<p> I am currently an Autonomy Engineer, Computer Vision at <a href="https://www.skydio.com/">Skydio</a>
-				primarily
-				working within photogrammetry and 3D vision.</p>
 			<p>Here are a couple of projects that I am proud to be a part of:</p>
 			<ul>
 				<li><a href="https://github.com/nerfstudio-project/nerfstudio">Nerfstudio - A collaboration-friendly
@@ -85,8 +90,7 @@
 			<p>
 				I have recently become interested in the intersection of machine learning and social choice, and
 				presented a <a href="https://arxiv.org/abs/2401.16412">paper</a> (co-authors Wesley Holliday and Eric
-				Pacuit) at <a href="https:
-						//sites.google.com/view/scala24/">SCaLa-24 Workshop</a> at <a
+				Pacuit) at <a href="https://sites.google.com/view/scala24/">SCaLa-24 Workshop</a> at <a
 					href="https://www.aamas2024-conference.auckland.ac.nz/">AAMAS 2024</a>
 				on the topic. It was also accepted as an oral presentation at AAAI 2025!
 			</p>
