--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
 			</ul>
 			<p>I like computer vision, graphics, beekeeping, woodworking, slide rules, krautrock, funk music,
 				satellites, signal
-				processing, oranges, robotics, traveling, generative modeling, and picking up new interests. I'm not so
+				processing, oranges, robotics, sculpting, traveling, generative modeling, folk and self-taught art,
+				vintage clothing, and picking up new interests. I'm not so
 				great at web design.
 			</p>
 			<p>
@@ -120,6 +121,11 @@
 		<p style="font-size: 0.8em; color: gray; max-width: 560px; margin: 0;">
 			Video of me playing my homemade pipe organ, designed and built during my senior year of high school.
 		</p>
+
+		<figure style="margin: 0;">
+			<img src="octopus_sculpture_compressed.gif" style="width: 560px; height: auto;">
+			<figcaption style="font-size: 0.8em; color: gray;">Sculpture of an octopus I made, 2025</figcaption>
+		</figure>
 	</div>
 </body>
 
