mp4s dont need to be compressed

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 	<div style="display: flex; flex-direction: column; align-items: flex-start; gap: 10px;">
 		<figure style="margin: 0;">
 			<video autoplay loop muted playsinline style="width: 560px; height: auto;">
-				<source src="1_distill_hr_1_compressed.mp4" type="video/mp4">
+				<source src="1_distill_hr_1.mp4" type="video/mp4">
 				<!-- Fallback for browsers that don't support video -->
 				<img src="1_distill_hr_1_compressed.gif" style="width: 560px; height: auto;">
 			</video>
@@ -133,7 +133,7 @@
 
 		<figure style="margin: 0;">
 			<video autoplay loop muted playsinline style="width: 560px; height: auto;">
-				<source src="octopus_sculpture_compressed.mp4" type="video/mp4">
+				<source src="octopus_sculpture.mp4" type="video/mp4">
 				<!-- Fallback for browsers that don't support video -->
 				<img src="octopus_sculpture_compressed.gif" style="width: 560px; height: auto;">
 			</video>
