--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
 				<!-- Fallback for browsers that don't support video -->
 				<img src="octopus_sculpture_compressed.gif" style="width: 560px; height: auto;">
 			</video>
-			<figcaption style="font-size: 0.8em; color: gray;">Sculpture of an octopus I made, 2025</figcaption>
+			<figcaption style="font-size: 0.8em; color: gray;">Sculpture of an octopus I made, 2025 (rendered with Luma
+				AI)</figcaption>
 		</figure>
 	</div>
 </body>
